--- a/css/cars.css
+++ b/css/cars.css
@@ -1,4 +1,6 @@
 article {
+    display: flex;
+    flex-direction: column;
     padding-top: 8vh;
     padding-bottom: 3vh;
 }
@@ -15,6 +17,7 @@ article {
     display: block;
     width: 100%;
     border-radius: 20px 20px 0 0;
+    cursor: pointer;
 }
 
 .car_info h2 {
@@ -41,6 +44,7 @@ article {
 .short_info_element {
     display: flex;
     justify-content: space-around;
+    align-items: center;
 }
 
 .short_info_element i {
