--- a/css/car-single-tablet.css
+++ b/css/car-single-tablet.css
@@ -36,7 +36,6 @@
 
     .car_data span {
         flex-basis: 60px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin: 10px 0;
     }
 }
