--- a/css/cars-tablet.css
+++ b/css/cars-tablet.css
@@ -23,6 +23,11 @@
         height: 40px;
         font-size: 2.2rem;
     }
+
+    .country_tilter_wrap input[type=checkbox] {
+        height: 20px;
+        width: 20px;
+    }
 }
 
 @media (min-width: 1366px) {
