--- a/css/cars.css
+++ b/css/cars.css
@@ -2,7 +2,7 @@ article {
     position: relative;
     display: flex;
     flex-direction: column;
-    padding-top: 8vh;
+    margin-top: 8vh;
     padding-bottom: 3vh;
 }
 
