--- a/css/car-single.css
+++ b/css/car-single.css
@@ -43,3 +43,32 @@ a.a_button_style {
     padding-left: 60px;
     padding-right: 60px;
 }
+
+.car_reservation {
+    padding: 20px 20px 50px;
+    margin-top: 20px;
+    border-top: 1px solid var(--bghover-orange);
+    text-align: center;
+}
+
+.car_reservation input {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.car_reservation input[type=text],
+.car_reservation input[type=date],
+.car_reservation input[type=tel] {
+    max-width: 400px;
+    height: 40px;
+    margin-bottom: 10px;
+    border-radius: 15px;
+}
+
+.car_reservation input[type=date],
+.car_reservation input[type=submit] {
+    width: 70%;
+    max-width: 250px;
+}
